2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-mmap’.

	* configure.ac (mmap): New AC_ARG_ENABLE to
	set shell var ‘use_mmap’, defaulting to ‘yes’.
	(AC_CHECK_HEADERS_ONCE): Move sys/mman.h from here
	to ‘AC_CHECK_HEADERS’, conditionalized on ‘use_mmap’.
	(AC_CHECK_FUNCS_ONCE): Move ‘madvise’, ‘mmap’ from here
	to ‘AC_CHECK_FUNCS’, conditionalized on ‘use_mmap’.
	(rcs_cv_sane_mmap, rcs_cv_mmap_signal): Add ‘use_mmap’
	to surrounding condition; use ‘AS_IF’ there and internally.
	(MMAP_SIGNAL): If ‘rcs_cv_mmap_signal’ is not set, use ‘0’.
	(rcs_mmap_ok): New shell var.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW):
	Remove ‘rcs_cv_sane_mmap’; add ‘rcs_mmap_ok’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Tidy up configure.ac a bit.

	* configure.ac (AC_CHECK_FUNCS_ONCE): Remove ‘getcwd’,
	‘mkstemp’, ‘sigaction’, ‘sigblock’, ‘strsignal’, ‘waitpid’.
	(SIG_ZAPS_HANDLER): Delete RCS_CBOOL, associated
	var ‘rcs_cv_sig_zaps’, and the check that sets it.
	(rcs_slsl_is_sl, rcs_cv_slsl_is_sl): Delete unused vars.
	(rcs_have_psignal_or_strsignal): Likewise.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove ‘ac_cv_func_getcwd’,
	‘ac_cv_func_mkstemp’, ‘ac_cv_func_readlink’, ‘rcs_slsl_is_sl’,
	‘rcs_have_psignal_or_strsignal’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Drop gnulib module ‘sig2str’.

	* m4/gnulib-cache.m4 (gl_MODULES): Remove ‘sig2str’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘strsignal’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘strsignal’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘sigaction’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘sigaction’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘getlogin_r’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘getlogin_r’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getpwuid_r’, not ‘getpwuid’.

	* configure.ac (AC_CHECK_FUNCS_ONCE):